tests/gating-api-requests/deny_hostNetwork_constraint.yaml
apiVersion: constraints.gatekeeper.sh/v1beta1
kind: K8sRejectHostNetwork
metadata:
  name: block-host-network
spec:
  match:
    kinds:
      - apiGroups: [""]
        kinds: ["Pod"]
